--- a/src/components/user_profile_page/user_profile_items/user_posts/UserProfilePosts.module.css
+++ b/src/components/user_profile_page/user_profile_items/user_posts/UserProfilePosts.module.css
@@ -48,6 +48,7 @@
   width: 100%;
 
   padding: 1.2rem 1.2rem;
+  border-bottom: 1px solid #ddd;
 
   display: flex;
   flex-direction: column;
